--- a/src/assets/css/icons.css
+++ b/src/assets/css/icons.css
@@ -5,25 +5,25 @@
     mask-position: center;
     -webkit-mask-repeat: no-repeat;
     -webkit-mask-position: center;
+    background-color: #828FA3;
 }
 
 .board {
     mask-image: url("../icons/board.svg");
     -webkit-mask-image: url("../icons/board.svg");
-    background-color: #828FA3;
 }
 
 .board--active {
     mask-image: url("../icons/board-active.svg");
     -webkit-mask-image: url("../icons/board-active.svg");
-    background-color: white;
+    background-color: white !important;
 
 }
 
 .board--purple {
     mask-image: url("../icons/board-purple.svg");
     -webkit-mask-image: url("../icons/board-purple.svg");
-    background-color: #635FC7;
+    background-color: #635FC7 !important;
 }
 
 .circle {
@@ -35,30 +35,38 @@
 .drop--down {
     mask-image: url("../icons/drop-down.svg");
     -webkit-mask-image: url("../icons/drop-down.svg");
-    background-color: #635FC7;
+    background-color: #635FC7 !important;
 }
 
 .eye {
     mask-image: url("../icons/eye.svg");
     -webkit-mask-image: url("../icons/eye.svg");
-    background-color: #828FA3;
 }
 
 .menu--dots {
     mask-image: url("../icons/menu-dots.svg");
     -webkit-mask-image: url("../icons/menu-dots.svg");
-    background-color: #828FA3;
 }
 
 .moon {
     mask-image: url("../icons/moon.svg");
     -webkit-mask-image: url("../icons/moon.svg");
-    background-color: #828FA3;
 }
 
 .sun {
     mask-image: url("../icons/sun.svg");
     -webkit-mask-image: url("../icons/sun.svg");
-    background-color: #828FA3;
+}
+
+.checked{
+    mask-image: url("../icons/checked.svg");
+    -webkit-mask-image: url("../icons/checked.svg");
+    background: var(--white, #FFF);
+}
+
+.close{
+    mask-image: url("../icons/close.svg");
+    -webkit-mask-image: url("../icons/close.svg");
+    background: var(--medium-grey, #828FA3);
 }
 
