night mode done

--- a/src/assets/css/colors.css
+++ b/src/assets/css/colors.css
@@ -7,6 +7,7 @@
     --lines-dark: #3E3F4E;
     --medium-grey: #828FA3;
     --lines-light: #E4EBFA;
+    --lines-light-hover: rgb(253, 228, 228);
     --light-grey-light-bg: #F4F7FD;
     --white: #FFFFFF;
     --red: #EA5555;
